[package]
name = "crossterm-prompt"
version = "0.1.0"
edition = "2021"
keywords = ["crossterm", "terminal", "prompt", "password", "shell"]

[dependencies]
crossterm = "0.22"
anyhow = "1"
unicode-width = "0.1"
scopeguard = "1.1"

[features]
default = []
history = []
completion = []
shell = ["history", "completion"]

[dev-dependencies]
thiserror = "1"
