[package]
name = "crossline"
version = "0.1.0"
edition = "2021"
keywords = ["crossterm", "terminal", "prompt", "password", "shell"]

[dependencies]
crossterm = "0.22"
anyhow = "1"
unicode-width = "0.1"
backtrace = "0.3"
scopeguard = "1.1"
unicode-segmentation = "1.8"

[features]
default = ["panic"]
completion = []
history = []
panic = []
shell = ["history", "completion"]

[dev-dependencies]
thiserror = "1"
